Login UI created and TestFX setting